force-app/main/default/objects/Americord_Partner_Setting__mdt/Americord_Partner_Setting__mdt.object-meta.xml
<CustomObject>
    <description>This metadata will hold the settings for the Americord Partner Tracking with Impact.</description>
    <label>Americord Partner Setting</label>
    <pluralLabel>Americord Partner Settings</pluralLabel>
</CustomObject>