force-app/main/default/objects/Americord_Partner_Setting__mdt/fields/Call_Action_Tracker_ID__c.field-meta.xml
<CustomField>
    <fullName>Call_Action_Tracker_ID__c</fullName>
    <description>Action Tracker ID for the Call event.</description>
    <inlineHelpText>Action Tracker ID for the Call event.</inlineHelpText>
    <label>Call Action Tracker ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>