force-app/main/default/objects/Americord_Partner_Setting__mdt/fields/Campaign_ID__c.field-meta.xml
<CustomField>
    <fullName>Campaign_ID__c</fullName>
    <description>Campaign ID for the Partner integration.</description>
    <label>Campaign ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>