force-app/main/default/objects/Americord_Partner_Setting__mdt/fields/Conversion_Action_Tracker_ID__c.field-meta.xml
<CustomField>
    <fullName>Conversion_Action_Tracker_ID__c</fullName>
    <description>Action Tracker ID for the Conversion event.</description>
    <inlineHelpText>Action Tracker ID for the Conversion event.</inlineHelpText>
    <label>Conversion Action Tracker ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>